# smetamath-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bit_set.rs  bit_set_tests.rs  database.rs  diag.rs  export.rs  line_cache.rs  main.rs  nameck.rs  parser.rs  proof.rs  scopeck.rs  segment_set.rs  util.rs  verify.rs  verify_tests.rs
