[package]
authors = ["Stefan O'Rear <sorear2@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "smetamath"
readme = "README.md"
version = "3.0.1-2"
description = "A parallel and incremental verifier for Metamath databases"
repository = "https://github.com/sorear/smetamath-rs"


[dependencies]
clap =  { version = "^2.34.0"}
filetime = "^0.2.16"
fnv = "^1.0.2"
regex = "^1.5.5"

[dev-dependencies]
rand = "0.8.5"

[features]
sysalloc = []

[profile]

[profile.release]
#codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
#codegen-units = 4

[profile.test]
#codegen-units = 4
