[package]
authors = ["Stefan O'Rear <sorear2@gmail.com>"]
license = "MIT OR Apache-2.0"
name = "smetamath"
readme = "README.md"
version = "0.0.1-1"
description = "A parallel and incremental verifier for Metamath databases"
repository = "https://github.com/sorear/smetamath-rs"
edition = "2021"


[dependencies]
clap =  { version = "^2.34.0"}
filetime = "^0.2.16"
fnv = "^1.0.2"
regex = "^1.5.5"

[dev-dependencies]
rand = "0.8.5"

[features]

[profile]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = "debuginfo"

[profile.dev]
opt-level = 1
codegen-units = 1

[profile.test]
codegen-units = 1
